k8s/stage/service.yml
apiVersion: v1
kind: Service
metadata:
  name: aks-app-service
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: aks-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
