k8s/stage/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-app-ingress-stage
  namespace: stage
spec:
  ingressClassName: nginx
  rules:
    - host: stage.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aks-app-service
                port:
                  number: 80
